force-app/main/default/objects/BypassAutomation__c/BypassAutomation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Bypass automations such as Triggers, Flows, Validation Rules</description>
    <label>Bypass Automation</label>
</CustomObject>