force-app/main/default/objects/BypassAutomation__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Account automations</description>
    <inlineHelpText>Bypass Account automations</inlineHelpText>
    <label>Accounts</label>
    <type>Checkbox</type>
</CustomField>