force-app/main/default/objects/BypassAutomation__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Contact automations</description>
    <inlineHelpText>Bypass Contact automations</inlineHelpText>
    <label>Contacts</label>
    <type>Checkbox</type>
</CustomField>