force-app/main/default/objects/BypassAutomation__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Opportunity automations</description>
    <inlineHelpText>Bypass Opportunity automations</inlineHelpText>
    <label>Opportunities</label>
    <type>Checkbox</type>
</CustomField>